--- a/src/pages/privacy-policy.mdx
+++ b/src/pages/privacy-policy.mdx
@@ -2,24 +2,164 @@
 layout: ../layouts/BasicLayout.astro
 title: 'Privacy Policy'
 description: 'This Privacy Policy describes how we collect, use, and protect your personal information when you use our services.'
-date: '2025-01-14'
+date: '2025-08-27'
 ---
 
 # Privacy Policy
 
-We value your privacy and are committed to protecting your personal information.<br />
-Scalar does not collect any personal data unless explicitly provided by you. If you use our cloud features, we may store necessary account information like your email address for authentication and service-related communication.<br />
-We do not share your data with third parties, and all data is handled securely. For our open-source version, no data is collected or transmitted.<br />
-For any questions or concerns about your data, feel free to [contact us](mailto:support@scalar.com).
+_Last Updated: August 27, 2025_
 
-## GDPR Compliance
+Your privacy is important to us. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you interact with our services, including our website, platform, and related tools. Please read this Privacy Policy carefully. If you do not agree with its terms, please discontinue use of our services.
 
-If you're located in the EU, you have the right to access, update, or delete your personal data. To make a request, simply [contact us](mailto:support@scalar.com). We process data in accordance with the GDPR and only retain it as long as necessary for the services you use.
+---
 
-## Cookies
+## 1. Information We Collect
 
-Our site uses essential cookies to enable basic functionality like login and preferences. We may also use cookies to understand how visitors use the site to improve usability.
+We may collect the following categories of information:
 
-## Open Source
+### 1.1 Personal Information
 
-Using the open-source Scalar CMS? We don't collect any data at all. Everything runs locally or in your own environment.
+- Name, email address, phone number
+- Billing and payment details
+- Account login credentials
+
+### 1.2 Non-Personal Information
+
+- Browser type, device type, operating system
+- IP address and geolocation data
+- Usage statistics, logs, cookies
+
+### 1.3 Sensitive Information (if applicable)
+
+- Only when voluntarily provided and necessary for the service
+- Always stored and processed in compliance with GDPR/CCPA
+
+---
+
+## 2. How We Collect Information
+
+We may collect information through:
+
+- **Direct interactions:** Registration forms, subscriptions, customer support
+- **Automated technologies:** Cookies, analytics, tracking pixels
+- **Third parties:** Business partners, service providers, payment processors
+
+---
+
+## 3. How We Use Information
+
+Your information may be used for:
+
+- Providing, operating, and improving our services
+- Processing payments and billing
+- Personalizing user experience
+- Sending updates, newsletters, and marketing communications (with consent)
+- Ensuring security, fraud detection, and compliance with legal obligations
+- Analyzing usage trends and performance
+
+---
+
+## 4. Legal Basis for Processing (GDPR Compliance)
+
+We process personal data under these legal grounds:
+
+- Consent (Article 6(1)(a) GDPR)
+- Contractual necessity (Article 6(1)(b) GDPR)
+- Legal obligation (Article 6(1)(c) GDPR)
+- Legitimate interests (Article 6(1)(f) GDPR)
+
+---
+
+## 5. Sharing and Disclosure
+
+We do **not** sell or rent personal data.  
+We may share data only with:
+
+- **Service providers:** Hosting, analytics, payment processing
+- **Business partners:** When necessary to deliver services
+- **Legal authorities:** When required by law or to protect rights
+- **Mergers & acquisitions:** In case of business transfer
+
+---
+
+## 6. Data Retention
+
+- We retain personal data only as long as necessary for the purposes outlined.
+- Account-related data is retained until deletion request.
+- Legal and financial records may be kept longer in compliance with law.
+
+---
+
+## 7. Cookies and Tracking Technologies
+
+- We use cookies to improve user experience, analyze trends, and personalize content.
+- You can control or disable cookies in your browser settings.
+- Third-party cookies (e.g., Google Analytics) may also be used.
+
+---
+
+## 8. Data Security
+
+We implement industry-standard safeguards:
+
+- Encryption (SSL/TLS, data-at-rest encryption)
+- Firewalls and intrusion detection
+- Access controls and authentication protocols
+- Regular audits and vulnerability testing
+
+---
+
+## 9. Your Rights (GDPR / CCPA)
+
+Depending on your location, you may have the right to:
+
+- Access your personal data
+- Rectify inaccurate or incomplete data
+- Request deletion (“Right to be Forgotten”)
+- Restrict or object to processing
+- Data portability
+- Opt-out of marketing communications
+- For California residents: opt-out of sale/sharing of personal information
+
+To exercise rights, contact us at: **[privacy@brantial.com]**
+
+---
+
+## 10. International Data Transfers
+
+- Your data may be processed in countries outside your residence.
+- We ensure appropriate safeguards (Standard Contractual Clauses, adequacy decisions) are in place.
+
+---
+
+## 11. Third-Party Links
+
+Our services may contain links to third-party websites.  
+We are not responsible for their privacy practices. Please review their policies.
+
+---
+
+## 12. Children’s Privacy
+
+- Our services are not directed at children under 13 (or 16 under GDPR).
+- We do not knowingly collect data from minors.
+- If we learn that a child has provided personal data, we will delete it.
+
+---
+
+## 13. Updates to this Privacy Policy
+
+We may update this policy from time to time.  
+The “Last Updated” date will be revised accordingly.  
+We encourage you to review this policy periodically.
+
+---
+
+## 14. Contact Us
+
+If you have questions or concerns about this Privacy Policy, contact us:
+
+Webtures
+494a Fulham Road, London, England, SW6 5NH
+Email: **hello@webtures.com**  
+Phone: **+90 216 599 04 95**
