--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -7,101 +7,113 @@ date: '2025-01-14'
 
 # Terms of Service
 
-Welcome to Scalar. These terms govern your use of our services and outline our mutual responsibilities.<br />
-By using Scalar, you agree to these terms. Please read them carefully before using our services.<br />
-You may use Scalar for your projects in accordance with these terms and applicable laws.<br />
-For any questions about our terms, please [contact us](mailto:support@scalar.com).
+_Last Updated: August 27, 2025_
 
-## Legal Compliance
+Welcome to Brantial. These Terms of Service ("Terms") govern your use of our website, platform, and related services (collectively, the "Services"). By accessing or using our Services, you agree to be bound by these Terms. If you do not agree, you must not use our Services.
 
-For cloud services, you must comply with all applicable laws and regulations. To make any legal requests or inquiries, simply [contact us](mailto:support@scalar.com). We handle all legal matters in accordance with applicable laws.
+---
 
-## Service Terms
+## 1. Eligibility
 
-Our service includes both cloud and self-hosted options. The cloud version requires account creation and includes additional features, while the self-hosted version can be used according to the MIT license terms.
+- You must be at least 18 years old (or the legal age of majority in your jurisdiction) to use our Services.
+- By using our Services, you represent that you have the legal capacity to enter into these Terms.
 
-## Open Source
+---
 
-Using the open-source Scalar CMS? You have complete freedom to modify and deploy it in your own environment, subject to the MIT license terms.
+## 2. Account Registration
 
-## Usage Terms
+- To access certain features, you may be required to create an account.
+- You agree to provide accurate, current, and complete information during registration.
+- You are responsible for maintaining the confidentiality of your login credentials and for all activities under your account.
 
-The open-source version is provided under the MIT license, giving you the freedom to use, modify, and distribute the software.
+---
 
-## Service Availability
+## 3. Acceptable Use
 
-For cloud services, we strive to maintain high availability but do not guarantee uninterrupted service. We may perform maintenance or updates that could temporarily affect service availability.
+You agree not to:
 
-For the open-source version, you are responsible for your own deployment and maintenance.
+- Use the Services for unlawful purposes.
+- Interfere with or disrupt the operation of the Services.
+- Attempt to gain unauthorized access to our systems.
+- Reverse-engineer, copy, or resell any part of the Services without prior written consent.
 
-## Data Protection
+---
 
-We handle your data in accordance with our [Privacy Policy](/privacy-policy). For the cloud version, we implement industry-standard security measures to protect your information.
+## 4. Intellectual Property
 
-## 1. Acceptance of Terms
+- All content, trademarks, logos, and intellectual property displayed on the Services are owned by Brantial or our licensors.
+- You may not use our intellectual property without prior written permission.
 
-1.1. By using our services, you confirm that you are at least 18 years old or have parent/guardian consent to use our platform.
+---
 
-1.2. These Terms and Conditions form a legally binding agreement between you and Scalar.
+## 5. Payment and Billing (if applicable)
 
-## 2. Services Provided
+- Certain Services may be subject to fees.
+- By purchasing, you agree to provide accurate payment information.
+- All payments are non-refundable unless required by law or explicitly stated otherwise.
 
-2.1. Scalar provides tools and solutions powered by artificial intelligence, such as:
+---
 
-- AI-driven analytics
-- Channel integration
-- Predictive modeling
+## 6. Third-Party Services
 
-  2.2. All features are subject to availability and may be updated or discontinued at our discretion.
+- Our Services may include links to third-party websites or tools.
+- We are not responsible for the availability, accuracy, or practices of such third parties.
 
-## 3. User Responsibilities
+---
 
-3.1. You agree to use our services for lawful purposes only.
+## 7. Disclaimers
 
-3.2. You are responsible for ensuring that your use of our platform complies with all applicable laws and regulations.
+- The Services are provided on an **"as-is" and "as-available" basis** without warranties of any kind.
+- We do not guarantee uninterrupted or error-free operation.
+- We are not liable for damages resulting from reliance on our Services.
 
-3.3. Unauthorized use, such as reverse engineering, reselling, or tampering with our AI systems, is strictly prohibited.
+---
 
-## 4. Privacy and Data Use
+## 8. Limitation of Liability
 
-4.1. Your privacy is important to us. By using Scalar, you agree to our Privacy Policy.
+To the maximum extent permitted by law:
 
-4.2. Data collected from your usage may be used to improve our AI algorithms and enhance our services.
+- Brantial and its affiliates are not liable for any indirect, incidental, consequential, or punitive damages.
+- Our total liability for any claim arising out of or relating to the Services shall not exceed the amount you paid us in the 12 months preceding the claim.
 
-4.3. Sensitive or personally identifiable information will never be shared without your consent, except as required by law.
+---
 
-## 5. Intellectual Property
+## 9. Indemnification
 
-5.1. All content, designs, and AI algorithms provided by Scalar are the intellectual property of Scalar.
+You agree to indemnify and hold harmless Brantial, its affiliates, and employees from any claims, damages, liabilities, costs, or expenses arising from:
 
-5.2. You may not duplicate, copy, distribute, or exploit any part of our services without prior written consent.
+- Your use of the Services
+- Your violation of these Terms
+- Your infringement of third-party rights
 
-## 6. Limitation of Liability
+---
 
-6.1. Scalar is provided "as is" without warranties of any kind.
+## 10. Termination
 
-6.2. We are not responsible for any losses, damages, or liabilities arising from the use of our services.
+- We may suspend or terminate your access to the Services at any time, with or without notice, if you violate these Terms.
+- Upon termination, all provisions of these Terms that should survive (ownership, indemnification, disclaimers, limitation of liability) shall continue to apply.
 
-6.3. While we strive for accuracy, our AI outputs are not guaranteed to be error-free or appropriate for all use cases.
+---
 
-## 7. Termination
+## 11. Governing Law & Jurisdiction
 
-7.1. We reserve the right to suspend or terminate your access to our services if you violate these Terms and Conditions.
+- These Terms are governed by the laws of **England and Wales** (adjust if necessary).
+- Any disputes shall be resolved in the courts of **London, UK**.
 
-7.2. Upon termination, your right to use the platform ceases immediately.
+---
 
-## 8. Changes to Terms
+## 12. Changes to Terms
 
-8.1. We may update these Terms and Conditions periodically. Any changes will be posted on this page with a new effective date.
+- We may update these Terms from time to time.
+- Continued use of the Services after updates constitutes acceptance of the new Terms.
 
-8.2. Continued use of our services constitutes acceptance of the updated terms.
+---
 
-## 9. Governing Law
+## 13. Contact Us
 
-9.1. These terms are governed by the laws of [Your Country/Region]. Any disputes will be resolved in the courts of [Your Jurisdiction].
+If you have questions about these Terms, please contact us:
 
-## 10. Contact Us
-
-If you have questions or concerns about these Terms and Conditions, please contact us at:
-
-[scalar@example.com](mailto:scalar@example.com)
+**Webtures**  
+494a Fulham Road, London, England, SW6 5NH  
+Email: **hello@webtures.com**  
+Phone: **+90 216 599 04 95**
