--- a/src/pages/privacy-policy.mdx
+++ b/src/pages/privacy-policy.mdx
@@ -121,7 +121,7 @@ Depending on your location, you may have the right to:
 - Opt-out of marketing communications
 - For California residents: opt-out of sale/sharing of personal information
 
-To exercise rights, contact us at: **[privacy@brantial.com]**
+To exercise rights, contact us at: **[privacy@brantial.ai]**
 
 ---
 
