--- a/src/pages/privacy-policy.mdx
+++ b/src/pages/privacy-policy.mdx
@@ -1,165 +1,105 @@
 ---
 layout: ../layouts/BasicLayout.astro
 title: 'Privacy Policy'
-description: 'This Privacy Policy describes how we collect, use, and protect your personal information when you use our services.'
-date: '2025-08-27'
+description: 'Brantial AI privacy policy detailing data collection, processing, and protection practices.'
+date: '2025-09-09'
 ---
 
-# Privacy Policy
+# Brantial Privacy Policy
 
-_Last Updated: August 27, 2025_
+_Last Updated: September 09, 2025_
 
-Your privacy is important to us. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you interact with our services, including our website, platform, and related tools. Please read this Privacy Policy carefully. If you do not agree with its terms, please discontinue use of our services.
-
----
-
-## 1. Information We Collect
-
-We may collect the following categories of information:
-
-### 1.1 Personal Information
-
-- Name, email address, phone number
-- Billing and payment details
-- Account login credentials
-
-### 1.2 Non-Personal Information
-
-- Browser type, device type, operating system
-- IP address and geolocation data
-- Usage statistics, logs, cookies
-
-### 1.3 Sensitive Information (if applicable)
-
-- Only when voluntarily provided and necessary for the service
-- Always stored and processed in compliance with GDPR/CCPA
+This Privacy Policy explains how Brantial AI ("Brantial" or "we"), developed and operated by Webtures LTD., collects, processes, and protects your personal data when you use our website and services ("Services"). We are committed to safeguarding your privacy.
 
 ---
 
-## 2. How We Collect Information
+## 1. Data Controller
 
-We may collect information through:
+Under GDPR, the data controller is:
 
-- **Direct interactions:** Registration forms, subscriptions, customer support
-- **Automated technologies:** Cookies, analytics, tracking pixels
-- **Third parties:** Business partners, service providers, payment processors
-
----
-
-## 3. How We Use Information
-
-Your information may be used for:
-
-- Providing, operating, and improving our services
-- Processing payments and billing
-- Personalizing user experience
-- Sending updates, newsletters, and marketing communications (with consent)
-- Ensuring security, fraud detection, and compliance with legal obligations
-- Analyzing usage trends and performance
+WEBTURES LTD.  
+494a Fulham Road, London, England, SW6 5NH  
+Email: [support@brantial.ai](mailto:support@brantial.ai)
 
 ---
 
-## 4. Legal Basis for Processing (GDPR Compliance)
+## 2. Data We Collect
 
-We process personal data under these legal grounds:
+When you use our Services, we may collect the following categories of personal and technical data:
 
-- Consent (Article 6(1)(a) GDPR)
-- Contractual necessity (Article 6(1)(b) GDPR)
-- Legal obligation (Article 6(1)(c) GDPR)
-- Legitimate interests (Article 6(1)(f) GDPR)
-
----
-
-## 5. Sharing and Disclosure
-
-We do **not** sell or rent personal data.  
-We may share data only with:
-
-- **Service providers:** Hosting, analytics, payment processing
-- **Business partners:** When necessary to deliver services
-- **Legal authorities:** When required by law or to protect rights
-- **Mergers & acquisitions:** In case of business transfer
+- IP address, browser type, access time
+- Referrer URL and device metadata
+- Prompts submitted by you
+- AI-generated outputs based on your prompts
+- (If authorized) Google Search Console and Google Analytics data
+- (For subscriptions) Stripe payment information and billing data
 
 ---
 
-## 6. Data Retention
+## 3. Purposes of Processing
 
-- We retain personal data only as long as necessary for the purposes outlined.
-- Account-related data is retained until deletion request.
-- Legal and financial records may be kept longer in compliance with law.
+- To provide AI-generated outputs tailored to your prompts
+- To generate analytics and reports about your website visibility and performance
+- To manage subscription and payment processes
+- To improve service functionality, security, and user experience
+- To comply with legal obligations
+
+---
+
+## 4. Legal Basis for Processing
+
+- GDPR Article 6(1)(a): Consent (e.g., analytics cookies, marketing permissions)
+- GDPR Article 6(1)(b): Contract necessity (provision of membership and subscription services)
+- GDPR Article 6(1)(c): Legal obligation (billing and tax compliance requirements)
+- GDPR Article 6(1)(f): Legitimate interests (system security, performance monitoring, fraud prevention)
+
+---
+
+## 5. Third-Party Service Providers
+
+- AI service providers (e.g., OpenAI, Anthropic, Google AI, etc.) – for processing prompts and generating AI outputs
+- Google Search Console & Google Analytics – for visibility and engagement analytics
+- Stripe – for subscription and payment processing
+- Cloudflare – for performance, DNS, and security
+
+These providers may process your IP address, technical identifiers, and, when necessary, your prompt content under their own privacy policies.
+
+---
+
+## 6. International Data Transfers
+
+Some of our service providers are located outside the European Economic Area (EEA), such as in the United States. We ensure that such transfers are based on the European Commission’s approved Standard Contractual Clauses (SCCs).
 
 ---
 
 ## 7. Cookies and Tracking Technologies
 
-- We use cookies to improve user experience, analyze trends, and personalize content.
-- You can control or disable cookies in your browser settings.
-- Third-party cookies (e.g., Google Analytics) may also be used.
+We use essential cookies for core functionality and Google Analytics cookies for usage analytics. You may control your cookie preferences via your browser settings. Non-essential cookies are only enabled with your consent.
 
 ---
 
-## 8. Data Security
+## 8. Data Retention
 
-We implement industry-standard safeguards:
-
-- Encryption (SSL/TLS, data-at-rest encryption)
-- Firewalls and intrusion detection
-- Access controls and authentication protocols
-- Regular audits and vulnerability testing
+We store your data only for as long as necessary to fulfill the purposes outlined above or to comply with legal retention requirements.
 
 ---
 
-## 9. Your Rights (GDPR / CCPA)
+## 9. Your Rights
 
-Depending on your location, you may have the right to:
+Under applicable data protection laws, you have the right to:
 
-- Access your personal data
-- Rectify inaccurate or incomplete data
-- Request deletion (“Right to be Forgotten”)
-- Restrict or object to processing
-- Data portability
-- Opt-out of marketing communications
-- For California residents: opt-out of sale/sharing of personal information
+- Request access to your data
+- Request rectification of inaccurate data
+- Request erasure of your data
+- Object to or restrict processing
+- Receive your data in a structured, machine-readable format (data portability)
 
-To exercise rights, contact us at: **[privacy@brantial.ai]**
+To exercise your rights, please contact us at [support@brantial.ai](mailto:support@brantial.ai).
 
 ---
 
-## 10. International Data Transfers
+## 10. Updates to This Policy
 
-- Your data may be processed in countries outside your residence.
-- We ensure appropriate safeguards (Standard Contractual Clauses, adequacy decisions) are in place.
-
----
-
-## 11. Third-Party Links
-
-Our services may contain links to third-party websites.  
-We are not responsible for their privacy practices. Please review their policies.
+We reserve the right to update this policy at any time. The current version will always be published on our website.
 
 ---
-
-## 12. Children’s Privacy
-
-- Our services are not directed at children under 13 (or 16 under GDPR).
-- We do not knowingly collect data from minors.
-- If we learn that a child has provided personal data, we will delete it.
-
----
-
-## 13. Updates to this Privacy Policy
-
-We may update this policy from time to time.  
-The “Last Updated” date will be revised accordingly.  
-We encourage you to review this policy periodically.
-
----
-
-## 14. Contact Us
-
-If you have questions or concerns about this Privacy Policy, contact us:
-
-Webtures
-494a Fulham Road, London, England, SW6 5NH
-Email: **hello@webtures.com**  
-Phone: **+90 216 599 04 95**
